EIP1-10370-communication-count-stat
